--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
     "gatsby-cli": "^2.4.8",
     "gatsby-plugin-sass": "^2.0.7",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
     "prettier": "^1.15.2"
   },
