--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-gif-player": "^0.4.1",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
