--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@cassette/components": "^2.0.0-alpha.31",
     "@cassette/core": "^2.0.0-alpha.31",
     "@cassette/player": "^2.0.0-alpha.31",
+    "fair-analytics-client-api": "^1.1.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-manifest": "^2.0.9",
