Use forked fair analytics client api to send unload events.

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@benwiley4000/fair-analytics-client-beacon-api": "1.1.0-beacon",
     "@cassette/components": "^2.0.0-alpha.31",
     "@cassette/core": "^2.0.0-alpha.31",
     "@cassette/player": "^2.0.0-alpha.31",
-    "fair-analytics-client-api": "^1.1.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-manifest": "^2.0.9",
