Upgrade fair analytics client version.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@benwiley4000/fair-analytics-client-beacon-api": "1.1.0-beacon",
+    "@benwiley4000/fair-analytics-client-beacon-api": "1.1.0-beacon.1",
     "@cassette/components": "^2.0.0-alpha.31",
     "@cassette/core": "^2.0.0-alpha.31",
     "@cassette/player": "^2.0.0-alpha.31",
