--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "@cassette/components": "^2.0.0-alpha.31",
     "@cassette/core": "^2.0.0-alpha.31",
     "@cassette/player": "^2.0.0-alpha.31",
-    "gatsby": "^2.0.76",
+    "gatsby": "^3.14.3",
     "gatsby-image": "^2.0.20",
-    "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-offline": "^2.0.16",
-    "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.14",
-    "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "gatsby-plugin-feed": "^3.14.0",
+    "gatsby-plugin-google-analytics": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.1",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-offline": "^4.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.14.1",
+    "gatsby-remark-copy-linked-files": "^4.11.0",
+    "gatsby-remark-images": "^5.11.0",
+    "gatsby-remark-prismjs": "^5.11.0",
+    "gatsby-remark-responsive-iframe": "^4.11.0",
+    "gatsby-remark-smartypants": "^4.11.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-remark": "^4.11.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "prismjs": "^1.25.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "typeface-merriweather": "0.0.72",
+    "typeface-montserrat": "0.0.75"
   },
   "keywords": [
     "gatsby"
@@ -36,12 +47,12 @@
     "gif-stills": "node generateGifStills.js"
   },
   "devDependencies": {
-    "gatsby-cli": "^2.4.8",
-    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-cli": "^3.0.0",
+    "gatsby-plugin-sass": "^3.0.0",
     "gh-pages": "^2.0.1",
     "gif-frames": "^1.0.1",
     "mkdirp": "^0.5.1",
-    "node-sass": "^7.0.0",
+    "node-sass": "^8.0.0",
     "prettier": "^1.15.2"
   },
   "repository": {
